First_Step/data/45/189/compilation.txt
Executable.java:33: error: incompatible types
        return tableau;
               ^
  required: int[]
  found:    Tools
1 error
./Executable.java:33: error: incompatible types
        return tableau;
               ^
  required: int[]
  found:    Tools
1 error
